# GIGABYTE-RAG-test

./: .gitignore  README.md  colab_demo.ipynb  pyproject.toml
scripts/: diagnose_page.py
src/data/: chunker.py  scraper.py
src/evaluation/: benchmark.py
src/rag/: generator.py  indexer.py  server.py
