[project]
name = "gigabyte-rag"
version = "0.1.0"
description = "RAG system for GIGABYTE AORUS MASTER 16 AM6H product Q&A"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.23.0",
]

[project.scripts]
scrape = "src.data.scraper:main"
index  = "src.rag.indexer:main"
serve  = "src.rag.server:main"
eval   = "src.evaluation.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
