[project]
name = "gigabyte-rag"
version = "0.1.0"
description = "Hybrid RAG pipeline for GIGABYTE laptop specification Q&A with reproducible benchmarking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
# Only needed if GIGABYTE spec page is JS-rendered (auto-detected at runtime)
playwright = ["playwright>=1.44.0"]

[project.scripts]
# Data pipeline
scrape = "src.data.scraper:main"
chunk  = "src.data.chunker:main"
index  = "src.rag.indexer:main"

# Online inference
serve  = "src.rag.server:main"

# Evaluation
eval   = "src.evaluation.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
